fetools-app/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --ui-contrast-color: #e8e8e8;
    --bckgrnd-color: #fff;

    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 270 50% 40%;
    --accent-foreground: 270 0% 100%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 1rem;

    --devex-font: 'Lato', sans-serif;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 0 0% 13%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
    font-family: var(--devex-font);
    color: var(--primary);
  }
  body {
    @apply bg-background text-foreground;
  }

  h2 {
    font-size: 2rem;
    font-weight: 700;
  }

  a:hover {
    @apply text-accent;
  }
}

@layer base {

  @layer InputComponents{

    *:focus-visible{
      outline: 2px solid #7F40BF;
    }

    #custom-color-input::-webkit-color-swatch-wrapper{
      height: 100%;
      width: 100%;
      padding: 0;
      margin: 0;
      cursor: pointer;
    }

    #custom-color-input::-webkit-color-swatch{
      height: 100%;
      width: 100%;
      border: none;
      border-radius: 4px;
    }
  }

  @layer ColorGradient {
    .wrap {
      display: relative;
      z-index: 0;
    }

    .slider {
      -webkit-appearance: none;
      appearance: none;
      width: 100%;
      height: 100%;
      outline: none;
      z-index: 4;
      cursor: copy;
    }
    
    .scrollbar-hide::-webkit-scrollbar{
      display: none;
    }

    .slider::-webkit-slider-thumb {
      cursor: -webkit-grab;
      pointer-events: visible;
      box-shadow:
      rgba(0, 0, 0, 0.15) 0 0 0 1px,
      rgba(0, 0, 0, 0.05) 0 10px 10px -5px,
      inset #fff 0 0 0 6px;
      -webkit-appearance: none;
      appearance: none;
      aspect-ratio: 1;
      transform: scale(2);
      border-radius: 50%;
      height: 13px;
      width: 13px;
      box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
    }

    .wrap .isActive::-webkit-slider-thumb {
      box-shadow: #7F40BF 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
      z-index: 10;
    }

    .slider::-moz-range-thumb {
      width: 30px;
      height: 30px;
      border-radius: 50%;
      cursor: -moz-grab;
      pointer-events: visible;
      transform: scale(1.2);
    }

    .wrap .isActive::-moz-range-thumb {
      box-shadow: #7F40BF 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
      z-index: 10;
    }

    .slider::-webkit-slider-runnable-track {
      background: none;/* get rid of white Chrome background */
      font: inherit; /* fix too small font-size in both Chrome & Firefox */
      margin: 0;
      pointer-events: none;
    }

    .slider::-moz-range-track {
      background: none; /* get rid of white Chrome background */
      font: inherit; /* fix too small font-size in both Chrome & Firefox */
      margin: 0;
      pointer-events: none;
    }

    #track-handler {
      cursor: copy;
    }


    @layer thumbColorStyle {
      .wrap label:nth-of-type(1) ::-webkit-slider-thumb {
        background: var(--thumb-color-0);
      }

      .wrap label:nth-of-type(2) ::-webkit-slider-thumb {
        background: var(--thumb-color-1);
      }

      .wrap label:nth-of-type(3) ::-webkit-slider-thumb {
        background: var(--thumb-color-2);
      }

      .wrap label:nth-of-type(4) ::-webkit-slider-thumb {
        background: var(--thumb-color-3);
      }

      .wrap label:nth-of-type(5) ::-webkit-slider-thumb {
        background: var(--thumb-color-4);
      }

      .wrap label:nth-of-type(6) ::-webkit-slider-thumb {
        background: var(--thumb-color-5);
      }

      .wrap label:nth-of-type(7) ::-webkit-slider-thumb {
        background: var(--thumb-color-6);
      }

      .wrap label:nth-of-type(8) ::-webkit-slider-thumb {
        background: var(--thumb-color-7);
      }

      .wrap label:nth-of-type(9) ::-webkit-slider-thumb {
        background: var(--thumb-color-8);
      }

      .wrap label:nth-of-type(10) ::-webkit-slider-thumb {
        background: var(--thumb-color-9);
      }
    }

    .gradientCSS {
      background: hsla(356, 22%, 55%, 1);

      background: linear-gradient(
        90deg,
        hsla(356, 22%, 55%, 1) 0%,
        hsla(31, 100%, 74%, 1) 100%
      );

      background: -moz-linear-gradient(
        90deg,
        hsla(356, 22%, 55%, 1) 0%,
        hsla(31, 100%, 74%, 1) 100%
      );

      background: -webkit-linear-gradient(
        0deg,
        hsla(356, 22%, 55%, 1) 0%,
        hsla(31, 100%, 74%, 1) 100%
      );

      filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A47275", endColorstr="#FFC07C", GradientType=1 );
    }
  }

  @layer ColorPicker{

    .colorPickerSliderVar{
      --hue-thumb-color: #000;
      --sat-thumb-color: #000;
      --sat-slider-color: #fff;
      --light-thumb-color: #fff;
      --light-slider-color: #fff;
      --alpha-thumb-color: #fff;
      --alpha-slider-color: #fff;
    }

    .colorPickerSlider{
      -webkit-appearance :none;
      -moz-appearance :none;
      appearance: none;
    }

    .colorPickerSlider::-webkit-slider-runnable-track{
      -webkit-appearance: none;
      appearance: none;
      background: #FFF;
      border-radius: 5px;
      box-shadow: 0 0 1px 0 #000;
      height: 12px;
    }

    .colorPickerSlider::-moz-range-track{
      -webkit-appearance: none;
      appearance: none;
      background: #FFF;
      border-radius: 5px;
      box-shadow: 0 0 1px 0 #000;
      height: 12px;
    }

    .colorPickerSlider::-webkit-slider-thumb{
      -webkit-appearance: none;
      appearance: none;
      cursor: pointer;
      aspect-ratio: 1;
      transform: translateY(-8%) scale(2);
      border-radius: 50%;
      height: 13px;
      width: 13px;
      box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
    }

    #picker-handles-container .isActive::-webkit-slider-thumb{
      box-shadow: #7F40BF 0 0 0 .8px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
    }

    .colorPickerSlider::-moz-range-thumb{
      -webkit-appearance: none;
      appearance: none;
      cursor: pointer;
      aspect-ratio: 1;
      transform: translateY(-8%) scale(2);
      border-radius: 50%;
      height: 13px;
      width: 13px;
      box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
    }

    .hueSlider::-webkit-slider-thumb{
      background: var(--hue-thumb-color);
    }
    
    .hueSlider::-moz-range-thumb{
      background: var(--hue-thumb-color);
    }
    
    .hueSlider::-webkit-slider-runnable-track{
      background: linear-gradient(
        90deg, 
        hsla(0, 100%, 50%, 1), 
        hsla(60, 100%, 50%, 1), 
        hsla(120, 100%, 50%, 1), 
        hsla(180, 100%, 50%, 1), 
        hsla(240, 100%, 50%, 1), 
        hsla(300, 100%, 50%, 1), 
        hsla(360, 100%, 50%, 1));
    }

    .hueSlider::-moz-range-track{
      background: linear-gradient(
        90deg, 
        hsla(0, 100%, 50%, 1), 
        hsla(60, 100%, 50%, 1), 
        hsla(120, 100%, 50%, 1), 
        hsla(180, 100%, 50%, 1), 
        hsla(240, 100%, 50%, 1), 
        hsla(300, 100%, 50%, 1), 
        hsla(360, 100%, 50%, 1));
    }

    .satSlider::-webkit-slider-thumb{
      background: var(--sat-thumb-color);
    }
    
    .satSlider::-moz-range-thumb{
      background: var(--sat-thumb-color);
    }

    .satSlider::-webkit-slider-runnable-track{
      background: var(--sat-slider-color);
    }

    .satSlider::-moz-range-track{
      background: var(--sat-slider-color);
    }

    .lightSlider::-webkit-slider-thumb{
      background: var(--light-thumb-color);
    }
    
    .lightSlider::-moz-range-thumb{
      background: var(--light-thumb-color);
    }

    .lightSlider::-webkit-slider-runnable-track{
      background: var(--light-slider-color);
    }

    .lightSlider::-moz-range-track{
      background: var(--light-slider-color);
    }

    .alphaSlider::-webkit-slider-thumb{
      background: var(--alpha-thumb-color);
    }
    
    .alphaSlider::-moz-range-thumb{
      background: var(--alpha-thumb-color);
    }

    .alphaSlider::-webkit-slider-runnable-track{
      background: var(--alpha-slider-color);
    }

    .lightSlider::-moz-range-track{
      background: var(--alpha-slider-color);
    }

  }

  @layer Toast{
    .ToastRoot[data-swipe='move'] {
      transform: translateY(var(--radix-toast-swipe-move-y));
    }
    .ToastRoot[data-swipe='cancel'] {
      transform: translateY(0);
      transition: transform 200ms ease-out;
    }
    .ToastBottom[data-swipe='end'] {
      animation: slideDown 100ms ease-out;
    }
    
    @keyframes slideDown {
      from {
        transform: translateY(var(--radix-toast-swipe-end-y));
      }
      to {
        transform: translateY(100%);
      }
    }
    @keyframes slideUp {
      from {
        transform: translateY(var(--radix-toast-swipe-end-y));
      }
      to {
        transform: translateY(-100%);
      }
    }
  }
}

